--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npx hardhat test",
-    "goerli-deploy": "npx hardhat run scripts/deploy.js --network goerli"
+    "goerli-deploy": "npx hardhat run scripts/deploy.js --network goerli",
+    "mumbai-deploy": "npx hardhat run scripts/deployDestination.js --network mumbai"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
+    "@chainlink/contracts": "^0.6.1",
     "dotenv": "^16.0.3"
   }
 }
